input pin doesnt work

--- a/brewkit-keeper.ioc
+++ b/brewkit-keeper.ioc
@@ -3,9 +3,11 @@ CortexM4.IPs=FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,RCC,WWDG2\:I,DMA,BDMA,MDMA,NVIC
 CortexM7.IPs=FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,RCC\:I,WWDG1\:I,DMA\:I,BDMA\:I,MDMA\:I,NVIC1\:I,SYS\:I,USART3\:I,USB_OTG_FS\:I,ETH\:I,CORTEX_M7\:I,DEBUG\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,LWIP\:I,RNG\:I,TIM1\:I
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
-FREERTOS_M7.IPParameters=Tasks01
+FREERTOS_M7.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
 FREERTOS_M7.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS_M7.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32H745ZIT3
 Mcu.Context0=CortexM7
@@ -30,23 +32,24 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin10=PC5
 Mcu.Pin11=PB0
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PD10
-Mcu.Pin17=PG7
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin12=PB2
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PD10
+Mcu.Pin18=PG7
+Mcu.Pin19=PA8
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PG11
-Mcu.Pin23=PG13
-Mcu.Pin24=PE1
-Mcu.Pin25=VP_FREERTOS_M7_VS_CMSIS_V2
-Mcu.Pin26=VP_SYS_VS_tim1
-Mcu.Pin27=VP_SYS_M4_VS_Systick
+Mcu.Pin20=PA9
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PG11
+Mcu.Pin24=PG13
+Mcu.Pin25=PE1
+Mcu.Pin26=VP_FREERTOS_M7_VS_CMSIS_V2
+Mcu.Pin27=VP_SYS_VS_tim1
+Mcu.Pin28=VP_SYS_M4_VS_Systick
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC1
@@ -54,7 +57,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745ZITx
@@ -138,16 +141,19 @@ PB14.GPIO_Label=LD3 [Red Led]
 PB14.Locked=true
 PB14.PinAttribute=Free
 PB14.Signal=GPIO_Output
+PB2.GPIOParameters=PinAttribute
+PB2.Locked=true
+PB2.PinAttribute=Free
+PB2.Signal=GPIO_Input
 PC1.GPIOParameters=PinAttribute
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.PinAttribute=CortexM7
 PC1.Signal=ETH_MDC
-PC13.GPIOParameters=GPIO_Label,PinAttribute
-PC13.GPIO_Label=B1 [Blue PushButton]
+PC13.GPIOParameters=PinAttribute
 PC13.Locked=true
 PC13.PinAttribute=Free
-PC13.Signal=GPIO_Input
+PC13.Signal=GPXTI13
 PC14-OSC32_IN\ (OSC32_IN).GPIOParameters=PinAttribute
 PC14-OSC32_IN\ (OSC32_IN).Locked=true
 PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
@@ -329,6 +335,8 @@ RCC.VCO3OutputFreq_Value=192000000
 RCC.VCOInput1Freq_Value=8000000
 RCC.VCOInput2Freq_Value=250000
 RCC.VCOInput3Freq_Value=8000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 USART3.IPParameters=VirtualMode-Asynchronous
