parallel work to generate GPIO init code that is ommited by the cube

--- a/brewkit-keeper.ioc
+++ b/brewkit-keeper.ioc
@@ -44,12 +44,13 @@ Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin20=PA9
 Mcu.Pin21=PA11
 Mcu.Pin22=PA12
-Mcu.Pin23=PG11
-Mcu.Pin24=PG13
-Mcu.Pin25=PE1
-Mcu.Pin26=VP_FREERTOS_M7_VS_CMSIS_V2
-Mcu.Pin27=VP_SYS_VS_tim1
-Mcu.Pin28=VP_SYS_M4_VS_Systick
+Mcu.Pin23=PD2
+Mcu.Pin24=PG11
+Mcu.Pin25=PG13
+Mcu.Pin26=PE1
+Mcu.Pin27=VP_FREERTOS_M7_VS_CMSIS_V2
+Mcu.Pin28=VP_SYS_VS_tim1
+Mcu.Pin29=VP_SYS_M4_VS_Systick
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC1
@@ -57,7 +58,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=29
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H745ZITx
@@ -179,6 +180,10 @@ PD10.GPIO_Label=USB_OTG_FS_PWR_EN
 PD10.Locked=true
 PD10.PinAttribute=Free
 PD10.Signal=GPIO_Output
+PD2.GPIOParameters=PinAttribute
+PD2.Locked=true
+PD2.PinAttribute=Free
+PD2.Signal=GPXTI2
 PD8.GPIOParameters=GPIO_Label,PinAttribute
 PD8.GPIO_Label=STLINK_RX
 PD8.Locked=true
@@ -337,6 +342,8 @@ RCC.VCOInput2Freq_Value=250000
 RCC.VCOInput3Freq_Value=8000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 USART3.IPParameters=VirtualMode-Asynchronous
